--- a/redux_KanBan/src/App.css
+++ b/redux_KanBan/src/App.css
@@ -44,9 +44,34 @@ header {
     max-width: 1200px;
 }
 
+header .pages {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
+header img {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+
 header a {
     text-decoration: none;
     color: inherit;
+    border-bottom: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.link:hover {
+    box-shadow: 0px 0px 3px #1990da86;
+
+}
+
+.active {
+    background-color: #1990da20;
 }
 
 /* Columns */
