minor changes in css and assignPage naviagte

--- a/redux_KanBan/src/App.css
+++ b/redux_KanBan/src/App.css
@@ -93,6 +93,9 @@ header a {
     font-size: 1.1rem;
     text-transform: uppercase;
     letter-spacing: 0.05em;
+    height: 30px;
+    display: flex;
+    align-items: center;
 }
 
 .inner-container .top {
