--- a/redux_KanBan/src/App.css
+++ b/redux_KanBan/src/App.css
@@ -46,8 +46,16 @@ header {
 
 header .pages {
     display: flex;
+    justify-content: space-between;
     gap: 30px;
     align-items: center;
+    flex-wrap: wrap;
+    /* border: 1px solid red; */
+    /* width: 340px; */
+}
+
+header .pages a, header .pages img {
+    margin: 5px 0;
 }
 
 header img {
@@ -65,9 +73,27 @@ header a {
     border-radius: 5px;
 }
 
+.sort-by-container {
+    position: relative;
+    /* border: 1px solid; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sort-by-container select {
+    /* margin-right: 10px; */
+    position: absolute;
+    width: 110px;
+    left: -120px;
+}
+
 .link:hover {
     box-shadow: 0px 0px 3px #1990da86;
-
+}
+.pages img:hover {
+    box-shadow: 0px 0px 3px #1990da86;
+    border-radius: 5px;
 }
 
 .active {
@@ -666,6 +692,12 @@ button[type="button"] {
 
 /* Responsive adjustments */
 @media (max-width: 480px) {
+    .heading {
+        display: none;
+    }
+    .pages {
+        width: 100%;
+    }
     form.form {
         padding: 1.5rem;
     }
